--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,7 @@
 bower_components/
 tests/
 tmp/
+dist/
 
 .bowerrc
 .editorconfig
@@ -8,5 +9,7 @@ tmp/
 .travis.yml
 .npmignore
 **/.gitkeep
+bower.json
+ember-cli-build.js
 Brocfile.js
 testem.json
