--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "tests"
   },
   "scripts": {
+    "postinstall": "bower install",
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:testall"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/CrowdStrike/ember-timetree.git"
+    "url": "https://github.com/abloom/ember-timetree.git"
   },
   "engines": {
     "node": ">= 0.10.0"
@@ -35,7 +36,6 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
     "ember-disable-prototype-extensions": "^1.0.0",
