--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "ember-timetree",
   "dependencies": {
-    "d3": "~3.5.5",
-    "ember": "1.13.7",
+    "d3": "~3.5.6",
+    "ember": "^2.1.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
@@ -12,5 +12,8 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0"
+  },
+  "resolutions": {
+    "ember": "^2.1.0"
   }
 }
