--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,9 @@
   "name": "ember-timetree",
   "dependencies": {
     "d3": "~3.5.6",
-    "ember": "^2.1.0",
-    "ember-cli-shims": "0.0.6",
-    "ember-cli-test-loader": "0.2.1",
-    "ember-load-initializers": "0.1.7",
-    "ember-qunit": "0.4.9",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.3",
-    "loader.js": "3.4.0",
-    "qunit": "~1.18.0"
+    "ember": "~2.6.0",
+    "ember-cli-shims": "0.1.1",
+    "ember-cli-test-loader": "0.2.2",
+    "ember-qunit-notifications": "0.1.0"
   }
 }
